garde/tests/rules/snapshots/rules__rules__dive_with_ctx__invalid.snap
---
source: garde/tests/./rules/dive_with_ctx.rs
expression: snapshot
---
Test2 {
    inner: Inner {
        field: "asdfgh",
    },
}
inner.field: length is greater than 5
